--- a/app/src/main/res/layout/activity_registrarse.xml
+++ b/app/src/main/res/layout/activity_registrarse.xml
@@ -64,7 +64,9 @@
             android:id="@+id/Registrar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Registrar"/>
+            android:background="@color/black"
+            android:text="Registrar"
+            android:textColor="@color/white"/>
     </LinearLayout>
 
 </LinearLayout>
