--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#4B5057</color>
+    <color name="colorPrimaryDark">#232529</color>
+    <color name="colorAccent">#FECB00</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
