menu lateral cambiado

--- a/app/src/main/res/layout/fragment_gallery.xml
+++ b/app/src/main/res/layout/fragment_gallery.xml
@@ -32,6 +32,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Mantenimiento"
+        android:textColor="@color/white"
+        android:background="@drawable/btn_circular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -45,6 +47,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:text="Ciber"
+        android:textColor="@color/white"
+        android:background="@drawable/btn_circular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -58,6 +62,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
         android:text="Ventas"
+        android:textColor="@color/white"
+        android:background="@drawable/btn_circular"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
