Ya no se reinicia los datos al girar la pantalla

--- a/app/src/main/res/layout/activity_dispositivos.xml
+++ b/app/src/main/res/layout/activity_dispositivos.xml
@@ -25,7 +25,7 @@
         android:text="No tiene dispositivos en mantenimiento"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvDispositivos"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 </LinearLayout>
