--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,9 +21,9 @@
         android:id="@+id/imageView"
         android:layout_width="356dp"
         android:layout_height="264dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logoo" />
@@ -81,7 +81,6 @@
         android:layout_marginTop="60dp"
         android:background="@drawable/btn"
         android:text="iniciar sesión"
-        android:textColor="@color/colorPrimary"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +101,7 @@
         app:layout_constraintTop_toBottomOf="@+id/inputTextPass" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewReset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
