--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logoo" />
+        app:srcCompat="@drawable/logoinicio" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout"
