--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -8,6 +8,10 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_inicio"
             android:title="@string/menu_home" />
+        <item android:id="@+id/nav_prod"
+            android:title="Añadir Productos"
+            android:icon="@drawable/ic_prod"
+            />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_soporte"
