--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,9 @@
         <item name="android:colorControlActivated">@color/colorAccent</item>
     </style>
 
+    <style name="LabelStyle">
+        <item name="android:background">@drawable/bg_label</item>
+        <item name="android:textColor">#FFFF</item>
+    </style>
+
 </resources>
