--- a/app/src/main/res/layout/activity_registrarse.xml
+++ b/app/src/main/res/layout/activity_registrarse.xml
@@ -66,7 +66,7 @@
             android:inputType="textPassword"
             android:hint="Confirmar contraseña"/>
         <Button
-            android:id="@+id/restablecerBoton"
+            android:id="@+id/registrarR"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/black"
