--- a/app/src/main/res/layout/activity_resetear_contrasenia.xml
+++ b/app/src/main/res/layout/activity_resetear_contrasenia.xml
@@ -18,7 +18,7 @@
         android:textColor="@color/colorWhite"
         android:textColorHint="@color/colorWhite"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/restablecerBoton"
+        app:layout_constraintBottom_toTopOf="@+id/registrarR"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.472"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
         app:layout_constraintVertical_bias="0.607" />
 
     <Button
-        android:id="@+id/restablecerBoton"
+        android:id="@+id/registrarR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="184dp"
