--- a/app/src/main/res/layout/activity_registrarse.xml
+++ b/app/src/main/res/layout/activity_registrarse.xml
@@ -8,70 +8,77 @@
     android:layout_marginRight="10dp"
     android:layout_marginLeft="10dp"
     tools:context=".Registrarse">
-
-    <LinearLayout
+    <ScrollView
+        android:layout_marginTop="150dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <EditText
-            android:id="@+id/Nombre"
+        android:layout_height="match_parent">
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_usuario"
-            android:hint="Nombre completo"/>
+            android:orientation="vertical">
+            <EditText
+                android:id="@+id/Nombre"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_usuario"
+                android:hint="Nombre completo"/>
 
-        <EditText
-            android:id="@+id/Direccion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_ubicacion"
-            android:hint="Dirección"/>
+            <EditText
+                android:id="@+id/Direccion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_ubicacion"
+                android:hint="Dirección"/>
 
-        <EditText
-            android:id="@+id/Ubicacion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_ubicacion"
-            android:hint="Ubicación"/>
+            <EditText
+                android:id="@+id/Ubicacion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_ubicacion"
+                android:hint="Ubicación"/>
 
-        <EditText
-            android:id="@+id/Telefono"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_telefono"
-            android:hint="Telefono"
-            android:inputType="phone"/>
+            <EditText
+                android:id="@+id/Telefono"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_telefono"
+                android:hint="Telefono"
+                android:inputType="phone"/>
 
-        <EditText
-            android:id="@+id/UsuarioR"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/correo_electronico"
-            android:inputType="textEmailAddress"
-            android:drawableLeft="@drawable/ic_correo_negro"/>
+            <EditText
+                android:id="@+id/UsuarioR"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/correo_electronico"
+                android:inputType="textEmailAddress"
+                android:drawableLeft="@drawable/ic_correo_negro"/>
 
-        <EditText
-            android:id="@+id/ContraseñaR"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:drawableLeft="@drawable/ic_contra1"
-            android:hint="Contraseña"/>
+            <EditText
+                android:id="@+id/ContraseñaR"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:drawableLeft="@drawable/ic_contra1"
+                android:hint="Contraseña"/>
 
-        <EditText
-            android:id="@+id/ContraseñaC"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_contra2"
-            android:inputType="textPassword"
-            android:hint="Confirmar contraseña"/>
-        <Button
-            android:id="@+id/registrarR"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/black"
-            android:text="Registrar"
-            android:textColor="@color/white"/>
-    </LinearLayout>
+            <EditText
+                android:id="@+id/ContraseñaC"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_contra2"
+                android:inputType="textPassword"
+                android:hint="Confirmar contraseña"/>
+            <Button
+                android:id="@+id/registrarR"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/black"
+                android:text="Registrar"
+                android:textColor="@color/white"/>
+        </LinearLayout>
+
+    </ScrollView>
+
+
 
 </LinearLayout>
