--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,6 +35,7 @@
                 android:layout_marginTop="236dp"
                 android:layout_marginEnd="40dp"
                 android:hint="@string/correo_electronico"
+                android:drawableLeft="@drawable/ic_baseline_email_24"
                 android:textColorHint="@color/colorWhite"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -50,6 +51,7 @@
                 android:layout_marginEnd="40dp"
                 android:hint="@string/contraseña"
                 android:textColorHint="@color/colorWhite"
+                android:drawableLeft="@drawable/ic_password"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/mEmailEdit"/>
