--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,6 +35,8 @@
                 android:layout_marginTop="236dp"
                 android:layout_marginEnd="40dp"
                 android:hint="@string/correo_electronico"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/white"
                 android:drawableLeft="@drawable/ic_baseline_email_24"
                 android:textColorHint="@color/colorWhite"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -50,6 +52,8 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="40dp"
                 android:hint="@string/contraseña"
+                android:inputType="textPassword"
+                android:textColor="@color/white"
                 android:textColorHint="@color/colorWhite"
                 android:drawableLeft="@drawable/ic_password"
                 app:layout_constraintEnd_toEndOf="parent"
